# car-classifier

./: README.md  car_classifier.py  cars_classifier_ntbk.ipynb  pyproject.toml
model/: idx_to_class.json
